add docker config
